# kv_compaction_qwen35_exp

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/qwen35_smoke/: qwen3_5_9b.yaml  qwen3_5_9b_nothinking.example.yaml
data/: README.md
data/smoke_test/: local_placeholder_qwen35.json
docs/: architecture.md  plan.md  repo_contract.md  reproduction.md  results.md  roo_proxy_experiment.md
examples/qwen35_smoke/: behavioral_eval_summary.json  service_demo_summary.json
scripts/: diagnose_sketch_coverage.py  export_example_summaries.py  probe_turnwise_cache_uniformity.py  profile_collection_chunk_size.py  profile_qwen35_proxy_scaling.py  prototype_replay_collection.py  run_behavioral_eval.py  run_behavioral_eval_probe.py  run_qwen35_openai_proxy.py  run_roo_lite_agent.py  run_service_demo.py  sweep_replay_window_budget.py  write_boundary_collection.py  write_query_coreset.py  write_runtime_plan.py
src/kv_compaction_qwen35_clean/: __init__.py  behavioral_eval.py  beta_fit.py  boundary_collection.py  cli.py  config.py  context_loader.py  coreset.py  data_types.py  head_budget.py  key_selection.py  model_runtime.py  openai_chat_canonicalization.py  (+8 more)
tests/: test_behavioral_eval.py  test_beta_fit.py  test_boundary_collection.py  test_config_and_context.py  test_coreset.py  test_examples.py  test_key_selection.py  test_model_runtime.py  test_openai_chat_canonicalization.py  test_prototype_bank.py  test_qwen35_openai_proxy.py  test_repo_shape.py  test_roo_lite_agent.py  test_runtime_compaction.py  test_segment_compaction_cache.py  test_service_demo.py
(+1 files in other folders)
