[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-compaction-qwen35-clean"
version = "0.1.0"
description = "Parallel clean artifact lane for Qwen3.5 KV compaction."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6"]

[project.scripts]
kv-qwen35-smoke = "kv_compaction_qwen35_clean.cli:run_smoke_eval"
kv-qwen35-demo = "kv_compaction_qwen35_clean.cli:run_service_demo"
kv-qwen35-export-examples = "kv_compaction_qwen35_clean.cli:export_example_summaries"
kv-qwen35-proxy = "kv_compaction_qwen35_clean.qwen35_openai_proxy:main"
kv-qwen35-roo-lite = "kv_compaction_qwen35_clean.roo_lite_agent:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
